# smart_dealer

./: .gitattributes  Cargo.toml  LICENSE  README.md  app.rs  db.sql  db_sample.sql
controllers/: contacts.rs  database.rs  example.rs  mod.rs
docs/: README.md  physical_model.sql  uml_diagram.dbm
middlewares/: database.rs  handlebars.rs  mod.rs
models/: addresses.rs  contact_details.rs  contacts.rs  mod.rs
static/css/: custom.css  raleway.css
static/js/: custom.js
views/: contacts.hbs.htm  contacts_tmp.htm  hello_world.hbs  index.hbs.htm  index.html  layout.hbs.htm  layout.htm
