[package]
name = "smart_dealer"
version = "0.1.0"
authors = ["Kamil Markiewicz <k.a.markiewicz@gmail.com>"]
license = "MIT"
repository = "https://github.com/kamarkiewicz/smart_dealer.git"

[[bin]]
name = "app"
path = "app.rs"


[dependencies.time]
git = "https://github.com/kamarkiewicz/time.git"
features = ["rustc-serialize", "postgres"]

[dependencies.postgres]
version = "0.9.2"
features = ["rustc-serialize"]

[dependencies.iron-postgres-middleware]
git = "https://github.com/kamarkiewicz/iron-postgres-middleware.git"

[dependencies]
iron = "0.1.20"
router = "0.0.10"
mount = "0.0.7"
rustc-serialize = "0.3.15"
handlebars-iron = "0.7.1"
tojson_macros = "0.3.4"
staticfile = "0.0.2"
maplit = "0.1.1"
